Added the .gitignore file in the folder & error.log file Ignored

--- a/Home.html
+++ b/Home.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        nav{
+            background-color: black;
+            color: white;
+            position: fixed;  
+            left: 0;  
+            right: 0;  
+            height: 50px;  
+            /* display: flex;   */
+            align-items: center;  
+        }
+        li
+        {
+            display: inline; 
+            margin: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Home</h1>
+    <h1 style="text-align:center;">Home</h1>
+    <nav>
+        <ul type="none">
+            <a href="BlogPage.html"><li>Blog</li></a>
+            <a href="AboutUS.html"><li>About Us</li></a>
+            <a href="contactUS.html"><li>Contact Us</li></a>    
+        </ul>
+    </nav>
+    <div>
+        
+    </div>
     <p>The paragraph goes here,paragraph goes 
         here paragraph goes here. 
         paragraph goes here. paragraph goes here. 
