About us content added

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -11,6 +11,9 @@
     <p>The paragraph goes here,paragraph goes 
         here paragraph goes here. 
         paragraph goes here. paragraph goes here. 
-        paragraph goes here.</p>
+        paragraph goes here.
+        
+        Some extra content addded here.
+    </p>
 </body>
 </html>
