About us page content is changed

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -8,12 +8,9 @@
 </head>
 <body>
     <h1>About US</h1>
-    <p>The paragraph goes here,paragraph goes 
-        here paragraph goes here. 
-        paragraph goes here. paragraph goes here. 
-        paragraph goes here.
-        
-        Some extra content addded here.
+    <p>
+        Flashing Branch content is going to merge in the the master Branch now.
+        Ready to go/......
     </p>
 </body>
 </html>
