On branch master committing changes on AboutUS page

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -12,7 +12,7 @@
         Flashing Branch content is going to merge in the the master Branch now.
         Ready to go/......
     </p>
-    <P>Now this is Software Engine Branch Making changes in the master branch.</P>
-    <h1>Added Para tag in about us page with h1 heading also</h1>
+    <P>Now this is master Branch Making changes.</P>
+    <h1>Added Para tag in about us page with h1 heading also on master Branch</h1>
 </body>
 </html>
