Direct Commit Skipping staging area along with changes made in the home page of SoftwareEngine branch

--- a/Home.html
+++ b/Home.html
@@ -50,5 +50,11 @@
     <div>
         This is another div containing another content
     </div>
+    <section>
+        <article>article 1:</article>
+        <p>This is important section made in home page on branch SoftwareEngine</p>
+        <article>article 2:</article>
+        <p>This can't be changed when we merge the branch</p>
+    </section>
 </body>
 </html>
