Committing changes made in About, home page on software engine branch

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -12,5 +12,6 @@
         Flashing Branch content is going to merge in the the master Branch now.
         Ready to go/......
     </p>
+    <h1>heading on SoftwareEngine Branch</h1>
 </body>
 </html>
