on master branch changed the little content of abouts & home page committed also

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -14,5 +14,6 @@
     </p>
     <P>Now this is master Branch Making changes.</P>
     <h1>Added Para tag in about us page with h1 heading also on master Branch</h1>
+    <h1>this is heading on about us page on master branch</h1>
 </body>
 </html>
