--- a/Home.html
+++ b/Home.html
@@ -56,5 +56,6 @@
         <article>article 2:</article>
         <p>This can't be changed when we merge the branch</p>
     </section>
+    <h1>This is heading master branch</h1>
 </body>
 </html>
