changes made in home page

--- a/Home.html
+++ b/Home.html
@@ -57,5 +57,12 @@
         <p>This can't be changed when we merge the branch</p>
     </section>
     <h1>This content is on SoftwareEngine Branch</h1>
+    <h2>Added un-ordered list on branch SoftwareEngine</h2>
+    <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+        <li>four</li>
+    </ul>
 </body>
 </html>
